Changes to individual product pages

--- a/adult-venus-flytrap-in-blue-terrarium.html
+++ b/adult-venus-flytrap-in-blue-terrarium.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Succulent Plants (5 Pack) - Store - Rainier Terrariums</title>
+		<title>Adult Venus Flytrap in 4.5" BLUE Terrarium - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,22 +59,20 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product12.png" alt="Succulent Plants (5 Pack)" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt='Adult Venus Flytrap in 4.5" BLUE Terrarium' class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil - Real Live Potted Succulents / Unique Indoor Cactus Decor by Plants for Pets</h2>
-					<h2 style="float: left">$17.48</h2>
-                    <a href="https://amzn.to/2PiN5Ke" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
-                    <br/>
-                    <img src="images/verified.png" alt="Quality Verified" class="verified">
+					<h2>Adult Venus Flytrap in 4.5" BLUE Terrarium - Carnivorous Plant Fly Trap by Nature Gift Store</h2>
+					<h2 style="float: left">$12.85</h2>
+					<a href="https://amzn.to/2STdtfR" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>HAND SELECTED: Every pack of succulents we send is hand-picked. You will receive a unique collection of species that are FULLY ROOTED IN 2 INCH POTS, which will be similar to the product photos (see photo 2 for scale). Note that we rotate our nursery stock often, so the exact species we send changes every week.</li>
-						<li>THE EASIEST HOUSE PLANTS: More appealing than artificial plastic or fake faux plants, and care is a cinch. If you think you can't keep houseplants alive, you're wrong; our succulents don't require fertilizer and can be planted in a decorative pot of your choice within seconds.</li>
-						<li>DIY HOME DECOR: The possibilities are only limited by your imagination; display them in a plant holder, a wall mount, a geometric glass vase, or even in a live wreath. Because of their amazingly low care requirements, they can even make the perfect desk centerpiece for your office.</li>
-						<li>UNIQUE GIFTS: Everyone loves receiving succulents as a gift, from children to grandma and grandpa. Our succulents are sure to please as a wedding gift, a gift for mom or dad, or a gift for a favorite teacher.</li>
-						<li>HEALTHY LIVE ARRIVAL GUARANTEED: Your succulents will arrive alive and healthy. Each order comes with the Plants For Pets 30-day guarantee, and our promise to you that you'll love your new plants or receive a full refund.</li>
-                    </ul>
+						<li>Live healthy adult sized Venus Flytrap Plant with a 4.5” diameter BLUE terrarium.</li>
+						<li>Will have at least 3 traps on it, ready to gobble a bug!</li>
+						<li>Comes with an easy care sheet and set up for beginners.</li>
+						<li>A ‘death trap’ for insects! These plants ‘trap’ their prey with a clever hair-trigger mechanism. Once trapped, they are slowly digested.</li>
+						<li>GUARANTEED! We guarantee LIVE arrival of your plant. ****DO NOT ORDER if below 40 degrees or above 85 degrees in your area. Our live arrival guaranty will be void if ordered during these temperatures. YOU ARE RESPONSIBLE FOR CHECKING TEMPERATURES IN YOUR AREA to be sure your plant arrives alive.**** We ship this item via USPS (post office) within 4 business days</li>
+					</ul>
 				</div>
             </div>
         </article>
