--- a/critter-care.html
+++ b/critter-care.html
@@ -123,7 +123,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/32kKIvu" target="_blank">
-								<img src="images/product18.png" alt="iso" class="product-img">
+								<img src="images/light-up-terrarium-kit8.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
 									<p>$39.99</p>
@@ -132,7 +132,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2wBpeyB" target="_blank">
-								<img src="images/product26.jpg" alt="spring" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium6.jpg" alt="spring" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Premium Live Springtails 16oz Mini Culture</p>
@@ -142,7 +142,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/37Tfay2" target="_blank">
-								<img src="images/product27.png" alt="iso" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium7.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Pocket Pets Fast Producing Roly Polys</p>
