--- a/critters.html
+++ b/critters.html
@@ -62,7 +62,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/32kKIvu" target="_blank">
-								<img src="images/product18.png" alt="iso" class="product-img">
+								<img src="images/light-up-terrarium-kit8.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<img src="images/verified.png" alt="Quality Verified" class="verified">
 									<p>Critters Direct Live Springtails + Isopods, Combo Package </p>
@@ -72,7 +72,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2wBpeyB" target="_blank">
-								<img src="images/product26.jpg" alt="spring" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium6.jpg" alt="spring" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Premium Live Springtails 16oz Mini Culture</p>
@@ -82,7 +82,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/37Tfay2" target="_blank">
-								<img src="images/product27.png" alt="iso" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium7.png" alt="iso" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Pocket Pets Fast Producing Roly Polys</p>
@@ -92,7 +92,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2HLjJ2V" target="_blank">
-								<img src="images/product40.jpg" alt="mus" class="product-img">
+								<img src="images/adult-venus-flytrap-in-blue-terrarium0.jpg" alt="mus" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Josh's Frogs Temperate Springtail Culture </p>
@@ -104,7 +104,7 @@
 					<tr>
 					<td class="product">
 						<a href="https://amzn.to/2wzfyoi" target="_blank">
-							<img src="images/product42.jpg" alt="mushr" class="product-img">
+							<img src="images/adult-venus-flytrap-in-blue-terrarium2.jpg" alt="mushr" class="product-img">
 							<div class="product-description">
 								<br/>
 								<p> Live Orange Smoothie Roly Polys! Rolie Polie Isopods</p>
@@ -114,7 +114,7 @@
 					</td>
 					<td class="product">
 						<a href="https://amzn.to/2vV9c2v" target="_blank">
-							<img src="images/product43.jpg" alt="mushro" class="product-img">
+							<img src="images/adult-venus-flytrap-in-blue-terrarium3.jpg" alt="mushro" class="product-img">
 							<div class="product-description">
 								<br/>
 								<p> Powder Orange Isopods Cleanup Crew</p>
