--- a/galapagos-terrarium-sphagnum-moss.html
+++ b/galapagos-terrarium-sphagnum-moss.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Terrarium Essentials Kit sold by JM Bamboo - Store - Rainier Terrariums</title>
+		<title>Galápagos Terrarium Sphagnum Moss - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,19 +59,21 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product8.png" alt="Terrarium Essentials Kit sold by JM Bamboo" class="product-pg-img">
+				<img src="images/galapagos-terrarium-sphagnum-moss.jpg" alt="Galápagos Terrarium Sphagnum Moss" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Terrarium Essentials Kit sold by JM Bamboo</h2>
-					<h2 style="float: left">$25.00</h2>
-					<a href="https://amzn.to/2wJuArX" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<h2>Galápagos (05213) Terrarium Sphagnum Moss, 5-Star Green Sphagnum, Natural, 4QT </h2>
+					<h2 style="float: left">$5.59</h2>
+					<a href="https://amzn.to/32lkc54" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<br/>
+					<img src="images/verified.png" alt="Quality Verified" class="verified">
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>Terrarium Essentials Kit sold by JM Bamboo</li>
-						<li>Great for nature lovers</li>
-						<li>It includes : Rocks, Charcoal, Potting Soil, Natural green moss, Instructions</li>
-						<li>Create your own mini garden</li>
-						<li>Earth Day present</li>
+						<li>Long-Lasting: Long-Fiber and Leafy Green Sphagnum Moss</li>
+						<li>High Absorbency: Controls Tropical & Wetland Humidity</li>
+						<li>Sustainable: Ecologically Regulated Harvests</li>
+						<li>Washed & Sieved for the Cleanest Possible Moss</li>
+						<li>Essential Bedding for Anoles, Salamanders, Frogs & Toads!</li>
                     </ul>
 				</div>
             </div>
