--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
 				<table>
 					<tr>
 						<td class="product">
-							<img src="images/product4.jpg" alt="venus" class="product-img">
+							<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt="venus" class="product-img">
 						</td>
 					</tr>
 				</table>
