--- a/h-potter-glass-terrarium-wardian-case.html
+++ b/h-potter-glass-terrarium-wardian-case.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>KooK Geometric Glass Terrarium - store - Rainier Terrariums</title>
+		<title>H Potter Glass Terrarium Wardian Case - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,20 +59,20 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product3.png" alt="KooK Geometric Glass Terrarium" class="product-pg-img">
+				<img src="images/light-up-terrarium-kit0.png" alt="H Potter Glass Terrarium Wardian Case" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>KooK Geometric Glass Terrarium, Eloquent Design, Plants, Succulents, Votive Candle Holder (Black)</h2>
-					<h2 style="float: left">$21.95</h2>
-					<a href="https://amzn.to/2HUHx49" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<h2>H Potter Glass Terrarium Wardian Case Succulent Planter Container for Plants Flowers Orchids Foliage and More WAR117</h2>
+					<h2 style="float: left">$189.50</h2>
+					<a href="https://amzn.to/2HNiJem" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>Both contemporary modern style and classic elegance come together with this artistic glass cube.</li>
-						<li>This KooK terrarium is perfect for drought tolerant plants like cacti, air-plants and succulents to Moss and fern this is a necessity for greenery lovers.</li>
-						<li>Show off your creativity by using this geometric terrarium as a tea light or votive candle holder.</li>
-						<li>Designed with a faceted gap, this creates a unique visual and a great air plant terrarium environment for plants to thrive and candles to flicker. The options are as endless as your imagination.</li>
-						<li>The terrariums are made of Ultra clear sodium calcium glass, (plants and decoration are not included)</li>
-					</ul>
+						<li>DELUXE DESIGN: The H Potter Glass Terrarium Wardian Case Planter is handcrafted of real glass (3 mm thickness), which sits atop a gray powder-coated metal tray. Entire container rests on ornate ball feet for a timeless look that brings elegance and charm to any space in your home. Tall planter box (H 20” x L 14” x W 9”) with tray (2” depth) is an ideal size for displaying many types of foliage, and comes complete with a custom, functional liner and professionally printed planting brochure.</li>
+						<li>ENDLESS PLANT POSSIBILIES: Update and change your greenery as often as you like according to seasons and holidays. From orchids to ivies, to displaying terrariums on a shelf, countertop, tabletop or desk, this planter is the perfect size to fit any space inside your home and can be moved easily from room to room. It’s an eye-catching focal point and makes an impressive statement wherever it’s placed.</li>
+						<li>ON TREND: Glass Terrariums are trending now as they add an earthy warmth to any traditional or modern home. Constructed for long-lasting durability and enjoyment, this luxurious planter makes the perfect gift as a house-warming, birthday or anniversary present and can be used as stunning décor for weddings and parties. The tranquility of greenery is an ideal mood setter and stress reliever. Plants not only promote a healthy home environment, they also offer a touch of beauty and sophistication.</li>
+						<li>INTRICATE DETAIL + MINIMALIST STYLE: Delicate etching ensures your Glass Terrarium is quality, designed and manufactured by H Potter with precise attention to every detail. Please refer to photo for specific measurements. To water or prune, use hinged roof panel and prop open with prop rod. If ordering an H Potter Planting Terrarium Kit to accompany your H Potter Wardian Case, please choose a Large Size Terrarium Kit. Moss, props and terrarium plants are not included.</li>
+						<li>H POTTER PROMISE: At H Potter, we take extreme pride in creating distinctive pieces to accent your home and garden. We use only the finest quality materials and professional packaging without cutting corners to save money, as we believe our customers deserve nothing less than the best.</li>
+                    </ul>
 				</div>
             </div>
         </article>
