--- a/kook-geometric-glass-terrarium.html
+++ b/kook-geometric-glass-terrarium.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>H Potter Terrarium Kit Succulent Soil Supplies - Store - Rainier Terrariums</title>
+		<title>KooK Geometric Glass Terrarium - store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,20 +59,20 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product11.jpg" alt="H Potter Terrarium Kit Succulent Soil Supplies" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium.png" alt="KooK Geometric Glass Terrarium" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus Planters for Kids with Activated Charcoal</h2>
-					<h2 style="float: left">$16.95</h2>
-					<a href="https://amzn.to/2HNqOQp" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<h2>KooK Geometric Glass Terrarium, Eloquent Design, Plants, Succulents, Votive Candle Holder (Black)</h2>
+					<h2 style="float: left">$21.95</h2>
+					<a href="https://amzn.to/2HUHx49" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>H Potter presents their new premium terrarium planting kit, offering everything a terrarium builder needs in one complete starter kit. Gift box and canvas bags create a beautiful gift.</li>
-						<li>Small Terrarium Kit includes the following supplies: pea gravel (approximately 11 oz), activated charcoal (approximately 1.5 oz), and soil (approximately 7 oz), along with detailed planting and care instructions.</li>
-						<li>Everything you need to create your own miniature garden arrives in one box.</li>
-						<li>This small terrarium kit is designed to fit H Potter terrariums SKUs 65-1R, 65-7R, WAR146, WAR147, WAR148 and WAR151, if you are using another container please refer to our terrarium sizes for a comparison. A medium and large terrarium planting kit are also available from H Potter.</li>
-						<li>Made in the USA by H Potter, continually bringing you high quality products designed to last.</li>
-                    </ul>
+						<li>Both contemporary modern style and classic elegance come together with this artistic glass cube.</li>
+						<li>This KooK terrarium is perfect for drought tolerant plants like cacti, air-plants and succulents to Moss and fern this is a necessity for greenery lovers.</li>
+						<li>Show off your creativity by using this geometric terrarium as a tea light or votive candle holder.</li>
+						<li>Designed with a faceted gap, this creates a unique visual and a great air plant terrarium environment for plants to thrive and candles to flicker. The options are as endless as your imagination.</li>
+						<li>The terrariums are made of Ultra clear sodium calcium glass, (plants and decoration are not included)</li>
+					</ul>
 				</div>
             </div>
         </article>
