--- a/materials.html
+++ b/materials.html
@@ -62,7 +62,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2vUiA6l" target="_blank">
-								<img src="images/product6.png" alt="cute" class="product-img">
+								<img src="images/cute-farms-terrarium-starter-kit.png" alt="cute" class="product-img">
 								<div class="product-description">
 									<p>Cute Farms Terrarium Starter Kit</p>
 									<p>$19.95</p>
@@ -71,7 +71,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2T7EQlc" target="_blank">
-								<img src="images/product8.png" alt="Essentials" class="product-img">
+								<img src="images/terrarium-essentials-kit.png" alt="Essentials" class="product-img">
 								<div class="product-description">
 									<p>Terrarium Essentials Kit </p>
 									<p>$21.99</p>
@@ -80,7 +80,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2HRqEro" target="_blank">
-								<img src="images/product11.jpg" alt="H potter" class="product-img">
+								<img src="images/light-up-terrarium-kit1.jpg" alt="H potter" class="product-img">
 								<div class="product-description">
 									<p>H Potter Terrarium Kit Succulent Soil Supplies for Plants Cactus</p>
 									<p>$16.95</p>
@@ -89,7 +89,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2PfM7xZ" target="_blank">
-								<img src="images/product14.jpg" alt="moss" class="product-img">
+								<img src="images/light-up-terrarium-kit4.jpg" alt="moss" class="product-img">
 								<div class="product-description">
 									<p>Galápagos (05213) Terrarium Sphagnum Moss</p>
 									<p>$5.09 </p>
@@ -100,7 +100,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/37WJYhb" target="_blank">
-								<img src="images/product16.png" alt="soil" class="product-img">
+								<img src="images/light-up-terrarium-kit6.png" alt="soil" class="product-img">
 								<div class="product-description">
 									<p>Organic Carnivorous Plant Soil - 1 Gallon </p>
 									<p>$8.95</p>
@@ -109,7 +109,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2w1QDd2" target="_blank">
-								<img src="images/product19.png" alt="rock" class="product-img">
+								<img src="images/light-up-terrarium-kit9.png" alt="rock" class="product-img">
 								<div class="product-description">
 									<p>Natural Slate Stone -1 to 3 inch Rocks</p>
 									<p>$15.95</p>
@@ -118,7 +118,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/32kJsIM" target="_blank">
-								<img src="images/product21.jpg" alt="Coco" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium1.jpg" alt="Coco" class="product-img">
 								<div class="product-description">
 									<p>Zoo Med Eco Earth (Single Brick)</p>
 									<p> $4.19 </p>
@@ -127,7 +127,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2HPUcW8" target="_blank">
-								<img src="images/product22.png" alt="char" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium2.png" alt="char" class="product-img">
 								<div class="product-description">
 									<p>Horticultural Charcoal, 100% All Natural Hardwood</p>
 									<p> $10.49 </p>
@@ -138,7 +138,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/3c4wseI" target="_blank">
-								<img src="images/product23.png" alt="co" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium3.png" alt="co" class="product-img">
 								<div class="product-description">
 									<p>Exo Terra Coco Husk Terrarium Substrate</p>
 									<p>$3.59</p>
@@ -147,7 +147,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2SQ5yzR" target="_blank">
-								<img src="images/product28.jpg" alt="sub" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium8.jpg" alt="sub" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p> Isopod Substrate ISO Mix Bioactive Substrate Bedding</p>
@@ -157,7 +157,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/32mUzAQ" target="_blank">
-								<img src="images/product41.jpg" alt="mush" class="product-img">
+								<img src="images/adult-venus-flytrap-in-blue-terrarium1.jpg" alt="mush" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Josh's Frogs Horticultural Charcoal (1 Quart)</p>
@@ -167,7 +167,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/32pim3s" target="_blank">
-								<img src="images/Product60.jpg" alt="wat" class="product-img">
+								<img src="images/cute-farms-terrarium-starter-kit0.jpg" alt="wat" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p> Zilla Reptile Décor Malaysian Driftwood</p>
