--- a/mkono-3-pack-mini-glass-geometric-terrarium.html
+++ b/mkono-3-pack-mini-glass-geometric-terrarium.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Adult Venus Flytrap in 4.5" BLUE Terrarium - Store - Rainier Terrariums</title>
+		<title>Mkono 3 Pack Mini Glass Geometric Terrarium - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -57,21 +57,21 @@
 			<li><a href="critters">Critters</a></li>
 		</ul>
 		<article style="height: 100vh;">
-            <div class="content" style>
+            <div class="content">
 				<br/><br/><br/>
-				<img src="images/product4.jpg" alt='Adult Venus Flytrap in 4.5" BLUE Terrarium' class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium.jpg" alt="Mkono 3 Pack Mini Glass Geometric Terrarium" class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Adult Venus Flytrap in 4.5" BLUE Terrarium - Carnivorous Plant Fly Trap by Nature Gift Store</h2>
-					<h2 style="float: left">$12.85</h2>
-					<a href="https://amzn.to/2STdtfR" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
-                    <br/><br/><br/>
-                    <p class="disclaimer">Manufacturer description</p>
+					<h2>Mkono 4 Inch Mini Glass Geometric Terrarium Container Set of 3 Modern Tabletop Planter Windowsill Decor Shelves DIY Display Box Centerpiece Gift for Succulent Air Plant Miniature Fairy Garden, Gold</h2>
+					<h2 style="float: left">$27.98</h2>
+					<a href="https://amzn.to/2LREg86" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
+					<br/><br/><br/>
+					<p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>Live healthy adult sized Venus Flytrap Plant with a 4.5” diameter BLUE terrarium.</li>
-						<li>Will have at least 3 traps on it, ready to gobble a bug!</li>
-						<li>Comes with an easy care sheet and set up for beginners.</li>
-						<li>A ‘death trap’ for insects! These plants ‘trap’ their prey with a clever hair-trigger mechanism. Once trapped, they are slowly digested.</li>
-						<li>GUARANTEED! We guarantee LIVE arrival of your plant. ****DO NOT ORDER if below 40 degrees or above 85 degrees in your area. Our live arrival guaranty will be void if ordered during these temperatures. YOU ARE RESPONSIBLE FOR CHECKING TEMPERATURES IN YOUR AREA to be sure your plant arrives alive.**** We ship this item via USPS (post office) within 4 business days</li>
+						<li>Simple and elegant appearance designs in 3 different shapes of Globe, Triangle Teardrop and Bowl adds modern and stylish sense to your living surroundings or work space. Beautiful artistic polyhedron terrarium for holding plants like succulent, fern, moss, cacti, tillandsias, air plants, DIY mini fairy garden, artificial plants with easy maintainence or other decorative objects.</li>
+						<li>Great geometrical design complements today's modern decor, adding dainty and chic accent to a room especially when serving as contemporary centerpiece on a coffee table, cabinet, desktop, floating shelves, and windowsills. Perfect display box for weddings, holidays, parties, offices, living home, bedroom, kitchen, Hotel, and home decor.</li>
+						<li>The geometric glass planter is made of pieces of glass blocks and metal frames, it's hard to make sure there are no gaps due to the product process. Be aware that it is NOT water tight - not designed for hydroponic plants, it is recommanded to cover the bottom with small stones before planting and water the plants by spray bottle.</li>
+						<li>Size: Pentagon Globe-shaped is 4.5" in diameter, Opening's diameter is 2.5"; Triangle Teadrop-shaped is 4"W×5"H, Opening's diameter is 4"W x 3"H; Pentagon Bowl-shaped is 4"W×4"H, Opening's diameter is 4". The glass geo cases are suitable for small or young plants. Great gift idea for greenary or art lovers!</li>
+						<li>Package Included: 3× glass terrarium in different shapes. Note: Plants and other decorations are not included. Glass products are fragile, please treat it carefully when using. If you receive the broken item, please contact us for replacement. Mkono is a registered trademark and our product is professional manufacturing and sole selling.</li>
 					</ul>
 				</div>
             </div>
