--- a/plants.html
+++ b/plants.html
@@ -62,7 +62,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/38OsmWd" target="_blank">
-								<img src="images/product4.jpg" alt="venus" class="product-img">
+								<img src="images/adult-venus-flytrap-in-blue-terrarium.jpg" alt="venus" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Nature Gift Store Adult Venus Flytrap </p>
@@ -72,7 +72,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/38Osl4B" target="_blank">
-								<img src="images/product9.png" alt="mini" class="product-img">
+								<img src="images/mini-ferns-for-terrariums.png" alt="mini" class="product-img">
 								<div class="product-description">
 									<p>Mini Ferns for Terrariums/Fairy Garden </p>
 									<p>$14.99</p>
@@ -81,7 +81,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2Pirn8R" target="_blank">
-								<img src="images/product12.png" alt="5" class="product-img">
+								<img src="images/light-up-terrarium-kit2.png" alt="5" class="product-img">
 								<div class="product-description">
 									<p>Succulent Plants (5 Pack), Fully Rooted in Planter Pots with Soil</p>
 									<p>$17.95</p>
@@ -90,7 +90,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/3c4QVA7" target="_blank">
-								<img src="images/product15.png" alt="3" class="product-img">
+								<img src="images/light-up-terrarium-kit5.png" alt="3" class="product-img">
 								<div class="product-description">
 									<p>3 Small Sized B52 Giant Venus Flytraps</p>
 									<p>$21.39</p>
@@ -101,7 +101,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2ST2mna" target="_blank">
-								<img src="images/product17.png" alt="sundew" class="product-img">
+								<img src="images/light-up-terrarium-kit7.png" alt="sundew" class="product-img">
 								<div class="product-description">
 									<p>Cape Sundew - Drosera capensis</p>
 									<p>$19.99</p>
@@ -110,7 +110,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/32j4vve" target="_blank">
-								<img src="images/product20.png" alt="fig" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium0.png" alt="fig" class="product-img">
 								<div class="product-description">
 									<p>Green Creeping Fig 2 Plants - Ficus - 3" Pot</p>
 									<p>$5.99</p>
@@ -119,7 +119,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/3c12JDr" target="_blank">
-								<img src="images/product38.jpg" alt="m" class="product-img">
+								<img src="images/kook-geometric-glass-terrarium8.jpg" alt="m" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Mycelium Spawn Dried Spores Kit</p>
@@ -129,7 +129,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/3cbPDnc" target="_blank">
-								<img src="images/product39.jpg" alt="mu" class="product-img">
+								<img src="images/kook-geometric-glass-terrarium9.jpg" alt="mu" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>Forest Organics Glow in the Dark Mushroom Growing Kit</p>
