--- a/product15.html
+++ b/product15.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product15.png" alt="Small Sized Giant Venus Flytraps" class="product-pg-img">
+				<img src="images/light-up-terrarium-kit5.png" alt="Small Sized Giant Venus Flytraps" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>3 Small Sized B52 Giant Venus Flytraps - Fly Trap - (Dionaea Muscipula) Carnivorous Plant 3 inch Pot </h2>
 					<h2 style="float: left">$17.99</h2>
