--- a/product16.html
+++ b/product16.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product16.png" alt="Organic Carnivorous Plant Soil" class="product-pg-img">
+				<img src="images/light-up-terrarium-kit6.png" alt="Organic Carnivorous Plant Soil" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Organic Carnivorous Plant Soil - 1 Gallon (4 Dry Quarts)</h2>
 					<h2 style="float: left">$11.95</h2>
