--- a/product17.html
+++ b/product17.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product17.png" alt="Cape Sundew - Drosera capensis" class="product-pg-img">
+				<img src="images/light-up-terrarium-kit7.png" alt="Cape Sundew - Drosera capensis" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Cape Sundew - Drosera capensis - Carnivorous Plant 3" Pot</h2>
 					<h2 style="float: left">$19.99</h2>
