--- a/product18.html
+++ b/product18.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product18.png" alt="Critters Direct Live Springtails + Isopods" class="product-pg-img">
+				<img src="images/light-up-terrarium-kit8.png" alt="Critters Direct Live Springtails + Isopods" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Critters Direct Live Springtails + Isopods, Combo Package</h2>
 					<h2 style="float: left">$39.99</h2>
