--- a/product19.html
+++ b/product19.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product19.png" alt="Natural Slate Stone" class="product-pg-img">
+				<img src="images/light-up-terrarium-kit9.png" alt="Natural Slate Stone" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Natural Slate Stone -1 to 3 inch Rocks for Miniature or Fairy Garden, Aquarium, Model Railroad & Wargaming</h2>
 					<h2 style="float: left">$15.95</h2>
