--- a/product20.html
+++ b/product20.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product20.png" alt="Green Creeping Fig 2 Plants" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium0.png" alt="Green Creeping Fig 2 Plants" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Green Creeping Fig 2 Plants - Ficus - 3" Pot - Houseplant/Terrarium/Fairy Garden</h2>
 					<h2 style="float: left">$5.99</h2>
