--- a/product23.html
+++ b/product23.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product23.png" alt="Exo Terra Coco Husk" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium3.png" alt="Exo Terra Coco Husk" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Exo Terra Coco Husk</h2>
 					<h2 style="float: left">$3.59</h2>
