--- a/product26.html
+++ b/product26.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product26.jpg" alt="Premium Live Springtails" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium6.jpg" alt="Premium Live Springtails" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>E-Z Botanicals a Division of DBDPet's Premium Live Springtails 16oz Mini Culture (Collembola) - Seed Your Terrariums, Vivariums, and Paludariums with Our Vivarium Janitors</h2>
 					<h2 style="float: left">$23.99</h2>
