--- a/product31.html
+++ b/product31.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product31.jpg" alt="Anchor Hocking 1-Gallon Glass Cookie Jar" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium1.jpg" alt="Anchor Hocking 1-Gallon Glass Cookie Jar" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Anchor Hocking 1-Gallon Glass Cookie Jar with Cover, Large (Pack of 2) - 4302-02-09</h2>
 					<h2 style="float: left">$24.82</h2>
