--- a/product34.html
+++ b/product34.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product34.jpg" alt="Succulent and Cactus Bonsai DIY Rocks" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium4.jpg" alt="Succulent and Cactus Bonsai DIY Rocks" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Succulent and Cactus Bonsai DIY Rocks, White Onxy, for Terrarium, Fairy Gardening, Top Dressing, 1.5lb</h2>
 					<h2 style="float: left">$8.99</h2>
