--- a/product35.html
+++ b/product35.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product35.jpg" alt="Natural Slate Stone" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium5.jpg" alt="Natural Slate Stone" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Natural Slate Stone - Less Than 1/8 inch Slate Gravel for Miniature or Fairy Garden, Aquarium, Model Railroad & Wargaming 8oz </h2>
 					<h2 style="float: left">$8.94</h2>
