--- a/product36.html
+++ b/product36.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product36.jpg" alt="Josh's Frogs BioBedding Tropical Bioactive Substrate" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium6.jpg" alt="Josh's Frogs BioBedding Tropical Bioactive Substrate" class="product-pg-img">
 				<div class="product-pg-description">
                         <h2>Josh's Frogs BioBedding Tropical Bioactive Substrate (10 quarts)</h2>
                         <h2 style="float: left">$29.99</h2>
