--- a/product38.html
+++ b/product38.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product38.jpg" alt="Porcini Mushroom Dried Spores Kit" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium8.jpg" alt="Porcini Mushroom Dried Spores Kit" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Seeds Porcini Mushroom King Bolete Mycelium Spawn Dried Spores Kit for Planting</h2>
 					<h2 style="float: left">$14.99</h2>
