--- a/product39.html
+++ b/product39.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product39.jpg" alt="Glow in the Dark Mushroom Growing Habitat" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium9.jpg" alt="Glow in the Dark Mushroom Growing Habitat" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Forest Organics Glow in the Dark Mushroom Growing Habitat Log Kit</h2>
 					<h2 style="float: left">$16.95</h2>
