--- a/product40.html
+++ b/product40.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product40.jpg" alt="Josh's Frogs Temperate Springtail Culture" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium0.jpg" alt="Josh's Frogs Temperate Springtail Culture" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Josh's Frogs Temperate Springtail (Collembola) Culture (32 oz)</h2>
 					<h2 style="float: left">$19.99</h2>
