--- a/product41.html
+++ b/product41.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product41.jpg" alt="Josh's Frogs Horticultural Charcoal" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium1.jpg" alt="Josh's Frogs Horticultural Charcoal" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Josh's Frogs Horticultural Charcoal (1 Quart)</h2>
 					<h2 style="float: left">$10.98</h2>
