--- a/product42.html
+++ b/product42.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product42.jpg" alt="Pocket Pets Live Orange Smoothie Roly Polys" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium2.jpg" alt="Pocket Pets Live Orange Smoothie Roly Polys" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Pocket Pets Live Orange Smoothie Roly Polys! Rolie Polie Isopods</h2>
 					<h2 style="float: left">$9.99</h2>
