--- a/product43.html
+++ b/product43.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product43.jpg" alt="Live Insects Powder Orange Isopods" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium3.jpg" alt="Live Insects Powder Orange Isopods" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Live Insects Powder Orange Isopods for Sale Cleanup Crew for Terrarium Reptile Bedding and Snake Bedding Procellio pruinosus</h2>
 					<h2 style="float: left">$10.00</h2>
