--- a/product44.html
+++ b/product44.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product44.jpg" alt="Pangea Ultimate Gecko Ledge" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium4.jpg" alt="Pangea Ultimate Gecko Ledge" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Pangea Ultimate Gecko Ledge - Magnetic Gecko Diet Feeder</h2>
 					<h2 style="float: left">$19.99</h2>
