--- a/product45.html
+++ b/product45.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product45.jpg" alt="SLSON Gecko Feeder Ledge" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium5.jpg" alt="SLSON Gecko Feeder Ledge" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>SLSON Gecko Feeder Ledge Acrylic Improved Suction Cup Reptile Feeder with 20 Pack 1 oz Plastic Bowls for Reptiles Food and Water Feeding,Black</h2>
 					<h2 style="float: left">$7.99</h2>
