--- a/product46.html
+++ b/product46.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product46.jpg" alt="Pangea Fruit Mix with Insects" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium6.jpg" alt="Pangea Fruit Mix with Insects" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Pangea Fruit Mix with Insects Crested Gecko Complete Diet 1/2 lb</h2>
 					<h2 style="float: left">$17.99</h2>
