--- a/product47.html
+++ b/product47.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product47.jpg" alt="Repashy Crested Gecko MRP Diet" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium7.jpg" alt="Repashy Crested Gecko MRP Diet" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Repashy Crested Gecko MRP Diet - Food 3 Oz JAR -</h2>
 					<h2 style="float: left">$13.98</h2>
