--- a/product48.html
+++ b/product48.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product48.jpg" alt="SunGrow Gecko Coco Den with Ladder" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium8.jpg" alt="SunGrow Gecko Coco Den with Ladder" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>SunGrow Gecko Coco Den with Ladder, 5.1-inches (Shell Diameter) 2.4-inches (Opening Diameter), Mini Condo for Lizards, Coco Texture Provide Food for Pets, Husk Hide, Cave Habitat with Hanging Loop</h2>
 					<h2 style="float: left">$19.20</h2>
