--- a/product49.html
+++ b/product49.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product49.jpg" alt="Exo Terra Jungle Vine" class="product-pg-img">
+				<img src="images/adult-venus-flytrap-in-blue-terrarium9.jpg" alt="Exo Terra Jungle Vine" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Exo Terra Jungle Vine</h2>
 					<h2 style="float: left">$3.13</h2>
