--- a/product50.html
+++ b/product50.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product50.jpg" alt="Fluker's Bamboo Bars for Reptile enclosures" class="product-pg-img">
+				<img src="images/exo-terra-nano-wide-terrarium0.jpg" alt="Fluker's Bamboo Bars for Reptile enclosures" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Fluker's Bamboo Bars for Reptile enclosures</h2>
 					<h2 style="float: left">$4.43</h2>
