--- a/product51.html
+++ b/product51.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product51.jpg" alt="Exo Terra Hiding Cave" class="product-pg-img">
+				<img src="images/exo-terra-nano-wide-terrarium1.jpg" alt="Exo Terra Hiding Cave" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Exo Terra Hiding Cave</h2>
 					<h2 style="float: left">$21.34</h2>
