--- a/product52.html
+++ b/product52.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product52.jpg" alt="Exo Terra Plastic Terrarium Plant" class="product-pg-img">
+				<img src="images/exo-terra-nano-wide-terrarium2.jpg" alt="Exo Terra Plastic Terrarium Plant" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Exo Terra Plastic Terrarium Plant, Large, Mandarin</h2>
 					<h2 style="float: left">$3.67</h2>
