--- a/product53.html
+++ b/product53.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/Product53.jpg" alt="Exo Terra Forest Branch" class="product-pg-img">
+				<img src="images/exo-terra-nano-wide-terrarium3.jpg" alt="Exo Terra Forest Branch" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Exo Terra Forest Branch</h2>
 					<h2 style="float: left">$6.86</h2>
