--- a/terrariums.html
+++ b/terrariums.html
@@ -61,18 +61,18 @@
 				<table>
 					<tr>
 						<td class="product">
-							<a href="https://amzn.to/2VmSNhE" target="_blank">
-								<img src="images/product2.jpg" alt="Mkono" class="product-img">
+							<a href="mkono-3-pack-mini-glass-geometric-terrarium.html">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium.jpg" alt="Mkono 3 Pack Mini Glass Geometric Terrarium" class="product-img">
 								<div class="product-description">
 									<br/>
-									<p>Mkono 3 Packs Mini Glass Geometric Terrarium</p>
-									<p>$23.99</p>
+									<p>Mkono 3 Pack Mini Glass Geometric Terrarium</p>
+									<p>$27.98</p>
 								</div>
 							</a>
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2PhajAn" target="_blank">
-								<img src="images/Product1.jpg" alt="kids" class="product-img">
+								<img src="images/light-up-terrarium-kit.jpg" alt="kids" class="product-img">
 								<div class="product-description">
 									<p>Light-up Terrarium Kit for Kids</p>
 									<p>$24.99</p>
@@ -81,7 +81,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/3bYhVRU" target="_blank">
-								<img src="images/Product3.png" alt="kook" class="product-img">
+								<img src="images/kook-geometric-glass-terrarium.png" alt="kook" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>KooK Geometric Glass Terrarium</p>
@@ -90,7 +90,7 @@
 							</a>
 						</td><td class="product">
 							<a href="https://amzn.to/3bW8Glj" target="_blank">
-								<img src="images/Product5.png" alt="exo" class="product-img">
+								<img src="images/exo-terra-nano-wide-terrarium.png" alt="exo" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p>EXO-TERRA Nano Wide Terrarium</p>
@@ -102,7 +102,7 @@
 					<tr>
 						<td class="product">
 							<a href="https://amzn.to/2umQEYj" target="_blank">
-								<img src="images/product7.png" alt="mkono2" class="product-img">
+								<img src="images/mkono-plant-terrarium-display-glass.png" alt="mkono2" class="product-img">
 								<div class="product-description">
 									<p>Mkono Plant Terrarium Display Glass Tabletop </p>
 									<p>$11.99</p>
@@ -111,7 +111,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2PjJk71" target="_blank">
-								<img src="images/product10.png" alt="h" class="product-img">
+								<img src="images/light-up-terrarium-kit0.png" alt="h" class="product-img">
 								<div class="product-description">
 									<p>H Potter Glass Terrarium </p>
 									<p>$189.50</p>
@@ -120,7 +120,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2wEmv7D" target="_blank">
-								<img src="images/product25.jpg" alt="slant" class="product-img">
+								<img src="images/mkono-3-pack-mini-glass-geometric-terrarium5.jpg" alt="slant" class="product-img">
 								<div class="product-description">
 									<p>GLASS SLANT BOWL/GLASS TERRARIUM SET OF 2</p>
 									<p>$24.99 </p>
@@ -129,7 +129,7 @@
 						</td>
 						<td class="product">
 							<a href="https://amzn.to/2vYr1h7" target="_blank">
-								<img src="images/Product54.jpg" alt="hideg" class="product-img">
+								<img src="images/exo-terra-nano-wide-terrarium4.jpg" alt="hideg" class="product-img">
 								<div class="product-description">
 									<br/>
 									<p> Exo Terra AllGlass Terrarium - 18 x 18 x 24  </p>
