--- a/exo-terra-nano-wide-terrarium.html
+++ b/exo-terra-nano-wide-terrarium.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Galápagos Terrarium Sphagnum Moss - Store - Rainier Terrariums</title>
+		<title>EXO-TERRA Nano Wide Terrarium, 8"x8"x8" - Store - Rainier Terrariums</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -59,21 +59,19 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product14.jpg" alt="Galápagos Terrarium Sphagnum Moss" class="product-pg-img">
+				<img src="images/exo-terra-nano-wide-terrarium.png" alt='EXO-TERRA Nano Wide Terrarium, 8"x8"x8"' class="product-pg-img">
 				<div class="product-pg-description">
-					<h2>Galápagos (05213) Terrarium Sphagnum Moss, 5-Star Green Sphagnum, Natural, 4QT </h2>
-					<h2 style="float: left">$5.09</h2>
-					<a href="https://amzn.to/32lkc54" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
-					<br/>
-					<img src="images/verified.png" alt="Quality Verified" class="verified">
+					<h2>EXO-TERRA Nano Wide Terrarium, 8"x8"x8"</h2>
+					<h2 style="float: left">$40.99</h2>
+					<a href="https://amzn.to/2rzSaVT" target="_blank" class="buy-btn"><p>Buy on Amazon</p></a>
                     <br/><br/><br/>
                     <p class="disclaimer">Manufacturer description</p>
 					<ul>
-						<li>Long-Lasting: Long-Fiber and Leafy Green Sphagnum Moss</li>
-						<li>High Absorbency: Controls Tropical & Wetland Humidity</li>
-						<li>Sustainable: Ecologically Regulated Harvests</li>
-						<li>Washed & Sieved for the Cleanest Possible Moss</li>
-						<li>Essential Bedding for Anoles, Salamanders, Frogs & Toads!</li>
+						<li>Glass terrarium for reptiles or amphibians</li>
+						<li>Patented front window ventilation</li>
+						<li>Raised bottom frame in order to fit a substrate heater; Waterproof bottom</li>
+						<li>Escape-proof door locks to prevent escape</li>
+						<li>Closable inlets for wires and/or tubing management</li>
                     </ul>
 				</div>
             </div>
