--- a/product21.html
+++ b/product21.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product21.jpg" alt="Zoo Med Eco Earth (Single Brick)" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium1.jpg" alt="Zoo Med Eco Earth (Single Brick)" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Zoo Med Eco Earth (Single Brick)</h2>
 					<h2 style="float: left">$4.19</h2>
