--- a/product22.html
+++ b/product22.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product22.png" alt="Horticultural Charcoal" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium2.png" alt="Horticultural Charcoal" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Horticultural Charcoal, 100% All Natural Hardwood Charcoal, Charcoal for Soil Amendment, Orchids, Terrariums, and Gardening (1qt)</h2>
 					<h2 style="float: left">$9.99</h2>
