--- a/product24.html
+++ b/product24.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product24.jpg" alt="LED Grow Light Strips for Plants" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium4.jpg" alt="LED Grow Light Strips for Plants" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>LED Grow Light Strips for Plants,Cholas 36W 132 LEDs Auto ON & Off Function,3/9/12H Timer 5 Dimmable Levels and 3 Switch Modes for Indoor Plants Gardening Greenhouse 3 Pack (Full Sepectrum Light)</h2>
 					<h2 style="float: left">$31.99</h2>
