--- a/product25.html
+++ b/product25.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product25.jpg" alt="Whole Housewares Glass Slant Cut Bowl" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium5.jpg" alt="Whole Housewares Glass Slant Cut Bowl" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>Whole Housewares Glass Slant Cut Bowl, Glass Terrarium, Globe Plant Vases, Candle Holders, Candy Jar (Dia 7" X H 5")</h2>
 					<h2 style="float: left">$24.99</h2>
