--- a/product28.html
+++ b/product28.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product28.jpg" alt="xyzReptiles Isopod Substrate ISO Mix" class="product-pg-img">
+				<img src="images/mkono-3-pack-mini-glass-geometric-terrarium8.jpg" alt="xyzReptiles Isopod Substrate ISO Mix" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>xyzReptiles Isopod Substrate ISO Mix Bioactive Substrate Bedding 4 Qt</h2>
 					<h2 style="float: left">$11.99</h2>
