--- a/product32.html
+++ b/product32.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product32.jpg" alt="1 Gallon glass Jug" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium2.jpg" alt="1 Gallon glass Jug" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>1 Gallon glass Jug</h2>
 					<h2 style="float: left">$12.97</h2>
