--- a/product37.html
+++ b/product37.html
@@ -59,7 +59,7 @@
 		<article style="height: 100vh;">
             <div class="content" style>
 				<br/><br/><br/>
-				<img src="images/product37.jpg" alt="EXO-TERRA Plantation Soil" class="product-pg-img">
+				<img src="images/kook-geometric-glass-terrarium7.jpg" alt="EXO-TERRA Plantation Soil" class="product-pg-img">
 				<div class="product-pg-description">
 					<h2>EXO-TERRA Plantation Soil Terrarium Substrate</h2>
 					<h2 style="float: left">$3.99</h2>
